[metadata]
name = randompkg
version = 1.0.1
author = Mayank Yadav
author_email = mayank24343@iiitd.ac.in
description = A simple Python package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/mayank24343/Random
project_urls =
    Bug Tracker = https://github.com/mayank24343/Random/issues
    Repository = https://github.com/mayank24343/Random
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
